# NilLang

./: CMakeLists.txt  LICENSE  README.md
cmake/: Compiler.cmake
include/nil/: config.h  nil.h
nil/: core.nil
src/: heap.c  heap.h  io.c  io.h  main.c  nil.c  stack.c  stack.h  stringtable.c  stringtable.h  types.h  utils.c  utils.h
src/compiler/: bytecode.c  bytecode.h  common.c  common.h  compiler.c  compiler.h
src/compiler/intrinsics/: compare.c  compare.h  conditions.c  conditions.h  controlflow.c  controlflow.h  intrinsics.c  intrinsics.h  math.c  math.h  memory.c  memory.h  procedural.c  procedural.h  stack.c  stack.h
src/lexer/: lexer.c  lexer.h  token.h
src/vm/: disasm.c  disasm.h  memory.c  memory.h  runtime.c  runtime.h  vm.c  vm.h
tests/: CMakeLists.txt  main.c
tests/samples/: loops.nil  variables.nil
